# GatherSun

./: .gitmodules  CMakeLists.txt  README.md
doc/: Doxyfile
res/font/: FiraCode-Medium.json  FiraCode-Medium.tiff  PixelArt.json
res/menu/: ui-elements.json
res/shader/: default.glsl  text.glsl
res/sprite/: test-spritesheet.json
src/: Core.h  Debug.cpp  Debug.h  GatherSun.cpp  GatherSun.h  PackedFreelist.cpp  PackedFreelist.h  Serializer.cpp  Serializer.h  Sprite.h  Util.cpp  Util.h  config.h.in  stb_image.cpp
src/entity/: Component.h  Entity.cpp  Entity.h  Movable.h  Object.cpp  Object.h  Player.cpp  Player.h
src/event/: Event.h  EventManager.cpp  EventManager.h
src/game/: Game.cpp  Game.h  GameState.h  Settings.h  Window.cpp  Window.h
src/render/: Animatable.h  Renderable.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/scene/: Camera.cpp  Camera.h  Scene.cpp  Scene.h
src/system/: AnimationSystem.cpp  AnimationSystem.h  EventSystem.cpp  EventSystem.h  RenderSystem.cpp  RenderSystem.h  System.h
src/ui/: Activatable.h  Button.h  Font.cpp  Font.h  Menu.cpp  Menu.h  OptionsMenu.cpp  OptionsMenu.h  PauseMenu.cpp  PauseMenu.h  Text.h
